Various small fixes for day 1

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -330,11 +330,11 @@
   - DIRO, Université de Montréal
   nametitle:
   position: PhD student
-  bio: ""
+  bio: "Tristan is a Ph.D. candidate at Mila & Université de Montréal, under the supervision of Yoshua Bengio. His research interests include Probabilistic Modeling, Structure Learning, Meta-Learning, Few-shot Learning, and Reinforcement Learning."
   photo: td.jpg
   alttext: Tristan Deleu
   title: "Probabilistic Modeling"
-  abstract: "Tristan is a Ph.D. candidate at Mila & Université de Montréal, under the supervision of Yoshua Bengio. His research interests include Probabilistic Modeling, Structure Learning, Meta-Learning, Few-shot Learning, and Reinforcement Learning."
+  abstract: ""
   session: day1
   date: 20231108
   time: "11:00"
